syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validation.proto";

service employeeService {
  rpc create (Employee) returns (Create) {
      option (google.api.http) = {
      post: "/employee",
      body: "*"
    };
  }

  rpc list (EmployeeQuery) returns (EmployeeList) {
    option (google.api.http) = {
      get: "/employee/:companyId"
    };
  }
}

message Create {
  string id = 1;
}

message EmployeeQuery {
  string companyId = 1;
}

message EmployeeList {
  repeated Employee employees = 1 [(validation.required)=true];
}

message Employee {
  string id=1;
  string name = 2 [(validation.required)=true, (validation.max)=255];
  string address = 3 [(validation.required)=true, (validation.max)=255];
  string companyId = 4 [(validation.required)=true, (validation.max)=255];
}

