syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validation.proto";

service statisticService {
  rpc get (StatisticQuery) returns (StatisticReturn) {
    option (google.api.http) = {
      get: "/statistic/:id"
    };
  }
}

message StatisticQuery {
  string id = 1 [(validation.required) = {val: true, msg: "adasdasd"}, (validation.pattern) = "^[0-9a-fA-F]{24}$"];
}

message StatisticReturn {
  int32 id = 1;
  string name = 2;
  int32 count = 3;
}

